[package]
name = "diameter-flow"
version = "0.1.0"
authors = ["Matteo Ceccarello <mcec@itu.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { path = "../bytes" }
argh = "0.1"
regex = "1.3"
rand = "0.7"
rand_xoshiro = "0.4"
sha2 = "0.8"
reqwest = "0.9"
url = "2.1"
flate2 = "1.0"
timely = "0.11"
abomonation_derive = "0.5"
abomonation = "0.7"
tar = "0.4"
bincode = "1.2"
serde = "1.0"
base64 = "0.11"
chrono = "0.4"
progress-logger = "0.1.1"
env_logger = "0.7"
dirs = "2"
rusqlite = {version = "0.23", features = ["bundled"]}

[build-dependencies]
reqwest = "0.9"
tar = "0.4"
flate2 = "1.0"
